Important Bugfix to create-time

--- a/app/elements/appointment-list-user/appointment-list-user.html
+++ b/app/elements/appointment-list-user/appointment-list-user.html
@@ -62,7 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </div>
 
             </paper-item-body>
-            <iron-icon icon="highlight-off" on-tap="roomDel"></iron-icon>
+            <iron-icon icon="highlight-off" on-tap="delAppoinment"></iron-icon>
           </paper-item>
         </div>
       </paper-card>
@@ -104,7 +104,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             });
           }
         },
-        appointClick: function(e) {
+        delAppoinment: function(e) {
 
         }
 
