--- a/app/elements/create-time/create-time.html
+++ b/app/elements/create-time/create-time.html
@@ -260,7 +260,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </paper-dialog>
 
       <paper-dialog id="startTimeDialog" modal class="paper-time-picker-dialog" role="dialog" exit-animation="fade-out-animation">
-        <paper-time-picker id="timeStartPicker"></paper-time-picker>
+        <paper-time-picker hour="15" id="timeStartPicker"></paper-time-picker>
         <div class="buttons">
           <paper-button dialog-dismiss>Cancel</paper-button>
           <paper-button dialog-confirm on-click="setStartTime">OK</paper-button>
@@ -269,7 +269,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <paper-dialog id="endTimeDialog" modal class="paper-time-picker-dialog" role="dialog" exit-animation="fade-out-animation">
 
-        <paper-time-picker id="timeEndPicker"></paper-time-picker>
+        <paper-time-picker hour="16" id="timeEndPicker"></paper-time-picker>
 
 
         <div class="buttons">
