--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -29,7 +29,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     page('/amanagep', function() {
       app.route = 'a-manage-profil';
     });
-
+    page('/asettings', function() {
+      app.route = 'a-settings';
+    });
     page('/ulogin', function() {
       app.route = 'u-login';
     });
