--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -26,8 +26,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'u-appointment-overview';
     });
 
-    page('/amanagep', function() {
-      app.route = 'a-manage-profil';
+
+
+    page('/umanagep', function() {
+      app.route = 'u-manage-profil';
     });
     page('/asettings', function() {
       app.route = 'a-settings';
@@ -80,6 +82,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     page('/dappov', function() {
       app.route = 'd-appointments-overview';
+    });
+
+    page('/dprof', function() {
+      app.route = 'd-profile';
     });
 
     // add #! before urls
