--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -84,3 +84,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="username-display/username-display.html">
 <link rel="import" href="no-rights/no-rights.html">
 <link rel="import" href="admin-interface/admin-interface.html">
+<link rel="import" href="profile-user/profile-user.html">
+<link rel="import" href="profile-docent/profile-docent.html">
